--- a/WEB DESIGN AND CODING/about.html
+++ b/WEB DESIGN AND CODING/about.html
@@ -23,7 +23,7 @@
     <div class="banner-text">
         <img src="image/image.jpg" height="400"  max-width="500">
         <h4>Healthy Choices</h4>
-        <p>Hi, visitors my website. Welcome to my recipes website. My name is Semiha. I am a Management Information Systems student at Medipol University. I love to cook and try different flavors. On this website, I share with you healthy versions of foods that people's can't give up. Try Healthy Choices's easy, practical healthy recipes. Find healthy cooking inspiration with Healthy Choices.</p> 
+        <p>Hi, visitors my website. Welcome to my recipes website. My name is Semiha. I love to cook and try different flavors. On this website, I share with you healthy versions of foods that people's can't give up. Try Healthy Choices's easy, practical healthy recipes. Find healthy cooking inspiration with Healthy Choices.</p> 
     </div>
     <div class="content-conteiner">
         <div class="content">
@@ -114,11 +114,12 @@
         </div>
         <footer>
             <p>Author: Semiha Aktaş<br>
-                <a href="mailto:semiha.aktas@std.medipol.edu.tr">semiha.aktas@std.medipol.edu.tr</a></p>
+                <a href="mailto:semiha.aktas20@gmail.com">semiha.aktas@std.medipol.edu.tr</a></p>
                 <a href="#"><i class="fab fa-youtube"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
         </footer>
 </body>
+
 </html>
