--- a/WEB DESIGN AND CODING/about.html
+++ b/WEB DESIGN AND CODING/about.html
@@ -114,7 +114,7 @@
         </div>
         <footer>
             <p>Author: Semiha Aktaş<br>
-                <a href="mailto:semiha.aktas20@gmail.com">semiha.aktas@std.medipol.edu.tr</a></p>
+                <a href="mailto:semiha.aktas20@gmail.com">semiha.aktas20@gmail.com</a></p>
                 <a href="#"><i class="fab fa-youtube"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-facebook"></i></a>
@@ -123,3 +123,4 @@
 </body>
 
 </html>
+
